# rust-bitvmx-bitcoin-rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: local_test.yaml  test.yaml
src/: bitcoin_client.rs  errors.rs  lib.rs  minreq_https.rs  reqwest_https.rs  rpc_config.rs  types.rs
