[package]
name = "bitvmx-bitcoin-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.4"
bitcoincore-rpc = "0.19"
thiserror = "2.0.12"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
reqwest = { version = "0.12.10", features = ["json", "rustls-tls", "blocking"] }
mockall = "0.13.0"
